--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.11"
   },
   "devDependencies": {
     "request": "^2.81.0",
