--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.11"
