--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.16.4",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.4.11"
+    "mongoose": "^5.4.11",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3"
   },
   "devDependencies": {
     "request": "^2.81.0",
