--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.11",
     "multer": "^1.4.1",
-    "multer-gridfs-storage": "^3.2.3"
+    "multer-gridfs-storage": "^3.2.3",
+    "body-parser": "^1.19.0",
+    "https": "^1.0.0",
+    "nodemailer": "^6.3.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
